4week/practice/network/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: naver
spec:
  type: ExternalName
  externalName: naver.com
