4week/practice/network/sg-test.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: share-sg
  name: share-sg
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  type: LoadBalancer
  selector:
    app: deploy-websrv
